# rust-todo-cli

./: CLAUDE.md  Cargo.toml  README.md
docs/: nvim-setup.md  requirement.md  rust-learnings.md  setup.md  techstack.md
src/: lib.rs  main.rs
src/commands/: add.rs  delete.rs  done.rs  list.rs  mod.rs
src/models/: errors.rs  mod.rs  repository.rs  todo.rs  value_objects.rs
src/storage/: json.rs
test/: integration.rs
