[package]
name = "rust-todo-cli"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A simple TODO CLI application for learning Rust"
license = "MIT"

[[bin]]
name = "rtodo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
chrono = { version = "0.4.41", features = ["serde"] }
colored = "3.0.0"
anyhow = "1.0.98"
directories = "6.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
